# geocold

./: .CMakeLists.txt.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Manifest.toml  Project.toml  README.md  doxygen.cfg  intro.jl
.ccls-cache/@@home@nishararjyal@Programming@Cpp@geocold/: @home@nishararjyal@.local@share@nvim@lsp_servers@ccls@clang-resource@include@__stddef_max_align_t.h.blob  @home@nishararjyal@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdarg.h.blob  @home@nishararjyal@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stddef.h.blob  @home@nishararjyal@.local@share@nvim@lsp_servers@ccls@clang-resource@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@11@algorithm.blob  @usr@include@c++@11@array.blob  @usr@include@c++@11@atomic.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bits@algorithmfwd.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@atomic_base.h.blob  @usr@include@c++@11@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@11@bits@basic_ios.h.blob  @usr@include@c++@11@bits@basic_ios.tcc.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  @usr@include@c++@11@bits@cxxabi_init_exception.h.blob  @usr@include@c++@11@bits@erase_if.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_defines.h.blob  @usr@include@c++@11@bits@exception_ptr.h.blob  @usr@include@c++@11@bits@functexcept.h.blob  @usr@include@c++@11@bits@functional_hash.h.blob  @usr@include@c++@11@bits@hash_bytes.h.blob  @usr@include@c++@11@bits@invoke.h.blob  @usr@include@c++@11@bits@ios_base.h.blob  @usr@include@c++@11@bits@istream.tcc.blob  @usr@include@c++@11@bits@locale_classes.h.blob  @usr@include@c++@11@bits@locale_classes.tcc.blob  @usr@include@c++@11@bits@locale_facets.h.blob  (+183 more)
.ccls-cache/@home@nishararjyal@Programming@Cpp@geocold/: .ccls-cache@@home@nishararjyal@Programming@Cpp@geocold@bench@firstbench.cpp  .ccls-cache@@home@nishararjyal@Programming@Cpp@geocold@bench@firstbench.cpp.blob  bench@firstbench.cpp.blob  include@geocold.hpp  include@geocold.hpp.blob  include@geocold@primitives@light.hpp.blob  include@geocold@primitives@line.hpp.blob  include@geocold@primitives@point.hpp.blob  include@geocold@primitives@ray.hpp.blob  include@geocold@primitives@vec3.hpp  include@geocold@primitives@vec3.hpp.blob
bench/: CMakeLists.txt
bulid/: CMakeCache.txt  DartConfiguration.tcl
cmake/: DownloadProject.CmakeLists.cmake.in  DownloadProject.cmake  cudadetect.cu
include/: CMakeLists.txt  bounding_boxes.cpp  bounding_boxes.hpp  common.hpp  define.hpp  definitions.hpp  geocold.hpp  light.hpp  line.hpp  localdiffgeo.hpp  normal.cpp  normal.hpp  objloader.cpp  objloader.hpp  point.cpp  point.hpp  pointveccommon.hpp  ray.hpp  rendererapplication.cpp  rendererapplication.hpp  rendererwindow.cpp  rendererwindow.hpp  shape.cpp  shape.hpp  transform.hpp  vec3.cpp  vec3.hpp
include/algorithms/: CMakeLists.txt  algorithms.hpp  convexhull.hpp
include/geocold/: compgeo.hpp  shirleyraytracer.hpp
include/primitives/: CMakeLists.txt
main/: CMakeLists.txt  extra.hpp  main.cpp
papers/proposal/: bibilo.bib  proposal.tex
testbench/: firsttest.cpp
unittests/: CMakeLists.txt  firsttest.cpp
